--- a/Core/app.css
+++ b/Core/app.css
@@ -70,7 +70,7 @@ body {
   position: absolute;
   bottom: 0;
   opacity: 0;
-  width: 100%;
+
   background: rgba(0, 0, 0, 0.7);
   color: white;
   padding: 20px;
@@ -78,11 +78,22 @@ body {
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   transition: all 0.5s;
+  margin: 20px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  left: 20px;
+  right: 20px;
+  width: 50%;
 }
 
 #name-box {
   font-weight: bold;
   margin-bottom: 10px;
+  color: #1d5cf0;
+}
+
+#name-box.female {
+  color: #f01de2;
 }
 
 #choices-container2 {
@@ -117,7 +128,8 @@ body {
   transition: all 0.7s;
 }
 
-#choices-container-fullscreen {
+#choices-container-fullscreen,
+#global-choices-container-menu {
   & .menu-positioned-container {
     position: absolute;
     width: 100%;
@@ -132,10 +144,9 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-
       & img {
-        height: 60px;
-        width: 60px;
+        height: 90%;
+        width: 90%;
         object-fit: cover;
       }
     }
@@ -163,7 +174,8 @@ body {
 }
 
 .choice-button:hover {
-  background: rgba(255, 255, 255, 0.2);;
+  background: rgba(255, 255, 255, 0.2);
+  ;
 }
 
 #text-box,
@@ -315,6 +327,11 @@ body {
   top: 50%;
   left: 50%;
   position: absolute;
+}
+
+.text-box {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
 /* video.character {
