--- a/Core/app.css
+++ b/Core/app.css
@@ -71,7 +71,7 @@ body {
   bottom: 0;
   opacity: 0;
 
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.2);
   color: white;
   padding: 20px;
   box-sizing: border-box;
@@ -82,7 +82,7 @@ body {
   box-sizing: border-box;
   border-radius: 20px;
   left: 20px;
-  right: 20px;
+  bottom: 20px;
   width: 50%;
 }
 
@@ -112,11 +112,31 @@ body {
   padding: 10px;
 }
 
-#choices-container button {
-  padding: 10px;
+#choices-container {
+  z-index: 1;
+}
+
+#choices-container .choice-button {
+  padding: 15px 30px;
   color: white;
   border: none;
   cursor: pointer;
+  color: white;
+  border: none;
+  cursor: pointer;
+  justify-content: flex-end;
+  font-size: clamp(1rem, 2vw, 2rem);
+  color: #000;
+  background-color: rgba(255, 255, 255, 70%);
+  box-shadow: 0 0 5px 0 rgba(255, 255, 255, 0.1);
+  align-self: flex-end;
+  transition: all 0.5s;
+}
+
+#choices-container .choice-button:hover {
+  background-color: rgba(94, 94, 94, 0.7);
+  box-shadow: 0 0 5px 0 rgba(255, 255, 255, 0.1);
+  color: #fff;
 }
 
 /* Añade esto a tu hoja de estilos */
@@ -144,14 +164,26 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+
       & img {
         height: 90%;
-        width: 90%;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
   }
 
+}
+
+
+
+.btnlayout label {
+  border-radius: 5px;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.btnlayout img:hover {
+  filter: brightness(1.1);
 }
 
 .choice-wrapper.fade-out {
@@ -163,14 +195,9 @@ body {
 }
 
 
-.choice-button {
-  padding: 12px 20px;
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 0.2s ease;
+
+.btnlayout {
+  padding: 0;
 }
 
 .choice-button:hover {
@@ -196,10 +223,10 @@ body {
   transition: all 1s;
 }
 
-.menu-tab-container {
+#choices-container .menu-tab-container {
   position: absolute;
   bottom: 20px;
-  right: 20px;
+  right: 130px;
   display: grid;
   grid-auto-rows: auto;
   gap: 10px;
@@ -213,13 +240,32 @@ body {
     display: flex;
     width: 90px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    padding: 0px;
+    overflow: hidden;
+    position: relative;
 
     & img {
-      height: 70px;
-      width: 70px;
-      object-fit: cover;
+      height: calc(100% - 30px);
+      width: 100%;
+      object-position: top;
+      object-fit: contain;
+    }
+
+    & label {
+      position: absolute;
+      bottom: 0;
+      background-color: #fff;
+      color: #111;
+      width: 100%;
+      font-size: 11px;
+      padding: 0px;
+      height: 30px;
+      text-align: center;
+      align-items: center;
+      display: flex;
+      justify-content: center;
     }
   }
 }
@@ -238,6 +284,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     transition: all 0.5s;
   }
+}
+
+.choice-button {
+  padding: 12px 20px;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.2s ease;
 }
 
 .menu-floating-container {
@@ -323,9 +379,8 @@ body {
 .default-choice-wrapper {
   width: 50%;
   min-width: 50px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
+  top: 30%;
+  right: 150px;
   position: absolute;
 }
 
